--- a/japan.html
+++ b/japan.html
@@ -156,7 +156,7 @@ body{
 <br>
 
 <left>
-<p><h1><font style="border:2px double;">4D3N TOKYO PACKAGE (HOTEL + 1 way TRANSFER)</font></p></h1>
+<ul><p><h1><font style="border:2px double;">4D3N TOKYO PACKAGE (HOTEL + 1 way TRANSFER)</font></p></h1>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Mar 21-Apr 15, 2018 and Holidays).</p>
 <p><font size="4">Note: Minimum of 4 persons per booking.</p>
 <p><font size="4">*Hotel Hoshi Kaikan (no breakfast) Budget.</p>
