--- a/malaysia.html
+++ b/malaysia.html
@@ -154,7 +154,7 @@ body{
 <br>
 <br>
 <left>
-<p><h2><font style="border:2px double;">3D2N kuala lumpur PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
+<ul><p><h2><font style="border:2px double;">3D2N kuala lumpur PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">*Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek and Holidays) minimum of 2 pax.</p>
 <p><font size="4">*Hotel 123 (2 star) P5699/per pax Arena Hotel (3 star) P6200/per pax.</p>
 <p><font size="4">*My Hotel (3 star) P6200/per pax Hotel Pudu (3 star) P6699/per pax.</p>
