--- a/singapore.html
+++ b/singapore.html
@@ -5,7 +5,7 @@
 <style>
 body{
 	
-	background-image:url('pic/bot.jpg');
+	background-image:url('pic/bab.jpg');
 	background-size:cover;
 	font-family:Century gothic;
 	font-size:12px;
@@ -152,7 +152,7 @@ body{
 </div>
 
 <left>
-<p><h2><font style="border:2px double;">3D2N SINGAPORE PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
+<ul><p><h2><font style="border:2px double;">3D2N SINGAPORE PACKAGE(HOTEL + TRANSFERS)</font></p></h2>
 <p><font size="4">Travel Period: Until Sep 30, 2018 (except Christmas Season, Holyweek, Holidays and Sep 12-17, 2018) minimum of 2 persons.</p>
 <p><font size="4">*HOTEL 81 Geylang (2-star) or similar class w/o breakfast (2 star) P10199/per pax.</p>
 <p><font size="4">*Fragrance Hotel Rose or similar (2 star) P10499/per pax.</p>
