--- a/lipa.html
+++ b/lipa.html
@@ -84,7 +84,14 @@ body{
 	color:black;
 	transition:0.9s;
 	}
+	/*---------------------------------------footer-----------------------------------------*/
 	
+
+footer{
+width:100%;
+background-color:black;
+padding:20px 0px;
+}
 </style>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -103,16 +110,7 @@ body{
     <li><a href="https://graceairfare.github.io/mywebsite16.html">ATTRACTIONS</a></li>
     <li><a href="https://graceairfare.github.io/mywebsite15.html">PROMOS&PACKAGES</a></li>
     <li><a href="https://graceairfare.github.io/mywebsite11.html">TOURIST SPOTS</a></li>
-    <li><a href="https://graceairfare.github.io/mywebsite8.html"> TRANSIENT HOUSES</a>
-    <ul>
-        <li><a href="https://graceairfare.github.io/baguio.html">BAGUIO</a></li>
-        <li><a href="https://graceairfare.github.io/laoag.html">LAOAG</a></li>
-        <li><a href="https://graceairfare.github.io/lipa.html">LIPA</a></li>
-        <li><a href="https://graceairfare.github.io/pangasinan.html">PANGASINAN</a></li>
-        <li><a href="https://graceairfare.github.io/tagaytay.html">TAGAYTAY</a></li>
-        <li><a href="https://graceairfare.github.io/vigan.html">VIGAN</a></li>
- </ul>
- </li>	   
+    
  </ul>
  </li>							       
  <li><a href="https://graceairfare.github.io/mywebsite8.html">INTERNATIONAL</a>
@@ -140,12 +138,16 @@ body{
     
       </ul>
 </li>
-<li><a href="https://graceairfare.github.io/mywebsite8.html">MORE</a>
-  <ul>
-<li><a href="https://graceairfare.github.io/mywebsite10.html">CONTACT US</a></li>
-<li><a href="https://graceairfare.github.io/mywebsite9.html">ABOUT US</a></li>
-</ul>
-</li>	
+<li><a href="https://graceairfare.github.io/mywebsite8.html"> TRANSIENT HOUSES</a>
+    <ul>
+        <li><a href="https://graceairfare.github.io/baguio.html">BAGUIO</a></li>
+        <li><a href="https://graceairfare.github.io/laoag.html">LAOAG</a></li>
+        <li><a href="https://graceairfare.github.io/lipa.html">LIPA</a></li>
+        <li><a href="https://graceairfare.github.io/pangasinan.html">PANGASINAN</a></li>
+        <li><a href="https://graceairfare.github.io/tagaytay.html">TAGAYTAY</a></li>
+        <li><a href="https://graceairfare.github.io/vigan.html">VIGAN</a></li>
+ </ul>
+ </li>	   
   <img style="none;"src="pic/nnn.jpg" width="350px" height=40px" align="right"><br>
 	&nbsp;  <br>   
 </ul>
@@ -167,10 +169,20 @@ body{
 	&nbsp; <br>
 	&nbsp; <br>
 	
-	<HR>
- 	<p><font style="background-color: none"><font size="3" face="calibri" color="black">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
-	<hr>
-	
+	<footer>
+
+<div class="wrapper">
+	<nav>
+	<ul>
+	<li><a href="https://graceairfare.github.io/mywebsite10.html">CONTACT US</a></li>
+	<li><a href="https://graceairfare.github.io/mywebsite9.html">ABOUT US</a></li>
+
+	</ul>
+	</nav>
+	</div>
+
+<p><font style="background-color: none"><font size="3" face="calibri" color="white">Copyright & Copy 2018; All Right Reserved | grace travel & tour services</font></p>
+</footer>
 </body
 </center>
 </html>
