--- a/palawan.html
+++ b/palawan.html
@@ -155,11 +155,112 @@ padding:20px 0px;
 <br>
 <br>
 <br>
-
-
-
-
-
+<ul><p><h1><font style="border:2px double;">3 DAYS 2NIGHTS PUERTO PRINCESA TOUR PACKAGE </font></p></h1>
+<p><font size="4">-Boat and Sightseeing Activities</p>
+<p><font size="4">-Minimum of 2 Persons.</p>
+<p><font size="4">-4,500php/pax.</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-3D2N Accommodation at a Standard Pension.</p>
+<p><font size="4">-Daily breakfast.</p>
+<p><font size="4">-Roundtrip Airport Transfer.</p>
+<p><font size="4">-Underground River Tour with Lunch (Joining Tour).</p>
+<p><font size="4">-Puerto Princesa City Tour with Light Snack (Joining Tour).</p>
+<p><font size="4">-Audio Device during the Tour.</p>
+<p><font size="4">-Van Pick-up and Drop during the tour.</p>
+<p><font size="4">-Licensed Tour Guide.</p>
+<p><font size="4">-Entrance fees.</p>
+<p><font size="4">-Boat rental with life vest </p>
+<p><h2>(ITINERARY)</font></p></h2>
+<p><h2>DAY 1:</font></p></h2>
+<p><font size="4">-Upon arrival at the Puerto Princes airport please proceed to arrival area and look for our Airport Representative with a welcome sign bearing the name of the guest.</p>
+<p><font size="4">-Meet and greet then proceed directly to the accommodation via van transfer.</p>
+<p><font size="4">-Check in at your accommodation.</p>
+<p><h2>DAY 2:</font></p></h2>
+<p><font size="4">-Early breakfast at accommodation and prepare for the Underground River Tour.</p>
+<p><font size="4">-7:30 to 8:00am Pick up time by the tour guide for your Underground River Tour with buffet lunch (8 hrs).</p>
+<p><font size="4">-After the tour proceed back to your accommodation.</p>
+<p><h2>DAY 3:</font></p></h2>
+<p><font size="4">-Early breakfast at accommodation and prepare for Morning City Tour (4 Hrs) o Places to Visit: </p>
+<p><font size="4">-Baywalk</p>
+<p><font size="4">-Plaza Cuartel </p>
+<p><font size="4">-Cathedral </p>
+<p><font size="4">-Mitra’s Ranch </p>
+<p><font size="4">-Bakers Hill</p>
+<p><font size="4">-Pasalubong Centers </p>
+<p><font size="4">( After the tour proceed directly to the PPS International Airport for departure).</p>
+<p><h2>TERMS and CONDITION:</font></p></h2>
+<p><font size="4">-Airfare is not included in the package.</p>
+<p><font size="4">-50% Down payment is required to secure the booking.</p>
+<p><font size="4">-Remaining balance should be settled 7 days prior to client’s arrival.</p>
+<p><font size="4">-Down payment is not refundable.</p>
+<p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
+<p><font size="4">-Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
+<p><font size="4">-If client failed to arrive on your booking date, NO REFUND will be given.</p>
+<p><h2><font style="border:2px double;">3 DAYS 2NIGHTS PUERTO PRINCESA TOUR PACKAGE </font></p></h2>
+<p><font size="4">-Swimming and Snorkeling activities.</p>
+<p><font size="4">-Minimum of 2 persons.</p>
+<p><font size="4">-4,500php/pax.</p>
+<p><font size="4">-Plaza Cuartel </p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-3D/2N Accommodation at a Standard Pension .</p>
+<p><font size="4">-Daily Breakfast.</p>
+<p><font size="4">-Round-trip PPS Airport to El Nido and El Nido to PPS Airport Transfers.</p>
+<p><font size="4">-El Nido Tour A with Buffet Lunch (Joining Tour)</p>
+<p><font size="4">-Mask and Snorkel</p>
+<p><font size="4">-Licensed Tour Guide.</p>
+<p><font size="4">-Entrance Fees.</p>
+<p><font size="4">-Environmental Fees.</p>
+<p><font size="4">-Boat Rental with Life Vest.</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><h2>DAY:1</font></p></h2>
+<p><font size="4">-Upon arrival at the PPS International Airport please proceed to the arrival area and look for our Airport Representative with a welcome sign bearing the name of the lead guest.</p>
+<p><font size="4">-Meet and greet and proceed directly to the Van Transfer for your travel to El Nido (5-6hrs).</p>
+<p><font size="4">-Check-in at your Accommodation.</p>
+<p><h2>DAY:2</font></p></h2>
+<p><font size="4">-Early breakfast at accommodation and prepare for the El Nido Tour A with Buffet Lunch.</p>
+<p><font size="4">-(Islands to Visit: Small Lagoon, Big Lagoon, Secret Lagoon, Shimizu Island and Seven Commando)</p>
+<p><font size="4">-Early breakfast at accommodation and prepare for the Van Transfer back to PPS International Airport.</p>
+<p><h2>DAY:3</font></p></h2>
+<p><font size="4">-Early breakfast at accommodation and prepare for the Van Transfer back to PPS International Airport.</p>
+<p><h2>TERMS and CONDITIONS:</font></p></h2>
+<p><font size="4">*Airfare is not included in the package.</p>
+<p><font size="4">*50% Down payment is required to secure the booking.</p>
+<p><font size="4">*Remaining balance should be settled 7 days prior to client’s arrival. </p>
+<p><font size="4">*Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge. </p>
+<p><font size="4">*Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
+<p><font size="4">*If client failed to arrive on your booking date, NO REFUND will be given.</p>
+<p><h2><font style="border:2px double;">3 DAYS 2 NIGHTS CORON TOUR PACKAGE</font></p></h2>
+<p><font size="4">*Swimming and Snorkeling.</p>
+<p><font size="4">*Minimum of 2 persons.</p>
+<p><font size="4">*4,500php/pax.</p>
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-3D2N Accommodation at a Standar Pension.</p>
+<p><font size="4">-Daily Breakfast </p>
+<p><font size="4">-Rountrip Airport Transfer.</p>
+<p><font size="4">-Coron Island Hopping Tour with Lunch (joining tour).</p>
+<p><font size="4">-Licensed Tour Guide.</p>
+<p><font size="4">-Entrance Fees.</p>
+<p><font size="4">-Environmental Fees.</p>
+<p><font size="4">-Boat Rental with Life Vest.</p>
+<p><h2>(ITINERARY)</font></p></h2>
+<p><h2>DAY:1</font></p></h2>
+<p><font size="4">-Upon arrival at the Coron Airport please proceed to the arrival area and look for our Airport Representative with a Welcome sign bearing the name of the lead guest.</p>
+<p><font size="4">-Meet and greet, then proceed directly to the accommodation via Van Transfer.</p>
+<p><font size="4">- Check-in at your Accommodation.</p>
+<p><h2>DAY:2</font></p></h2>
+<p><font size="4">-Early breakfast at accommodation and prepare for the Coron Ultimate Tour with Lunch (Joining Tour).</p>
+<p><font size="4">-(Islands to Visit: Kayangan Lake, Twin Lagoon, Siete Pecados, Smith Beach, Skeleton Wreck, CYC Beach, Coral Garden).</p>
+<p><font size="4">-After the tour proceed back to your Accommodation.</p>
+<p><h2>DAY:3</font></p></h2>
+<p><font size="4">-Breakfast at accommodation and prepare for the Pick-up to Busuanga Airport for your departure.</p>
+<p><h2>TERMS and CONDITIONS:</font></p></h2>
+<p><font size="4">-Airfare is not included in the package.</p>
+<p><font size="4">-50% Down payment is required to secure the booking.</p>
+<p><font size="4">-Remaining balance should be settled 7 days prior to client’s arrival.</p>
+<p><font size="4">-Down payment is not refundable.</p>
+<p><font size="4">-Any cancellation received within 7 days prior to the arrival date will occur the first night’s charge.</p>
+<p><font size="4">-Any cancellation received within 3 days prior to the arrival date will be charged the entire stay.</p>
+<p><font size="4">-If client failed to arrive on your booking date, NO REFUND will be given.</p>
 
 </ul>
 </ul>
