--- a/baguio.html
+++ b/baguio.html
@@ -134,8 +134,14 @@ padding:20px 0px;
 </li>
  <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
-	
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
     
       </ul>
 </li>
