--- a/iloilo.html
+++ b/iloilo.html
@@ -133,7 +133,14 @@ padding:20px 0px;
 </li>
  <li><a href="https://graceairfare.github.io/mywebsite8.html">LOCAL</a>
     <ul>
-   <li><a href="https://graceairfare.github.io/mywebsite12.html"> INTERNATIONAL RATE</a>
+    <li><a href="https://graceairfare.github.io/batanes.html">BATANES</a></li>						     
+    <li><a href="https://graceairfare.github.io/boracay.html">BORACAY</a></li>
+    <li><a href="https://graceairfare.github.io/camihuin.html">CAMIGUIN</a></li>
+    <li><a href="https://graceairfare.github.io/cebu.html">CEBU</a></li>
+    <li><a href="https://graceairfare.github.io/iloilo.html">ILO-ILO</a></li>
+    <li><a href="https://graceairfare.github.io/singapore.html">PALAWAN</a></li>
+    <li><a href="https://graceairfare.github.io/panglao island.html">PANGLAO ISLAND</a></li>
+    <li><a href="https://graceairfare.github.io/surigao.html">SURIGAO</a></li>
 	
     
       </ul>
@@ -155,6 +162,82 @@ padding:20px 0px;
 <br>
 <br>
 <br>
+<left>
+
+<ul><ul><p><h2><font style="border:2px double;">3 days 2 nights ILOILO CITY OF LOVE TOUR</font></p></h2> 
+<p><font size="4">(PACKAGE with City Tours/Isla Gigantes & Guimaras Hotel: Ongbun Hotel)</p> 
+<p><font size="4">(2 pax-8,300/pax).</p>
+<p><font size="4">(3 pax-7,099/pax).</p> 
+<p><font size="4">(4 pax-6,099/pax).</p> 
+<p><font size="4">(5 pax-5,799/pax).</p>
+<p><font size="4">(6 pax-5,399/pax).</p>
+<p><font size="4">(7 pax-5,300/pax).</p> 
+<p><font size="4">(8 pax-5,099/pax).</p> 
+<p><font size="4">(9 pax-4,999/pax).</p>  
+<p><font size="4">(10 pax-4,799/pax).</p> 
+<p><h2>(INCLUSIONS)</font></p></h2>
+<p><font size="4">-3d2n Hotel Accommodation.</p>
+<p><font size="4">-Transpo.</p> 
+<p><font size="4">-Pumpboat for Island hopping.</p>
+<p><font size="4">-Entrance Fees.</p>
+<p><font size="4">-Island Entrace fees.</p> 
+<p><font size="4">-Unlimited Seafood Lunch at Isla Gigantes.</p>
+<p><font size="4">-Driver.</p> 
+<p><font size="4">-Tour.</p>
+
+<p><h2>(EXCLUSIONS)</font></p></h2>
+<p><font size="4">-Airfare.</p>
+<p><font size="4">-Foods except Lunch at Isla Gigantes.</p>
+<p><font size="4">-Transpo from Iloilo Terminal to Carles and vice versa.</p>
+<p><h2>Sample Itinerary:</font></p></h2>
+<p><font size="5">Day 1 (City tour+South tour) 7am-Pick up at Iloilo Airport 8am-Check in hotel 830am-Start of City tour.</p>
+
+
+<p><font size="4">1.Plaza Libertad.</p> 
+<p><font size="4">2.City Gallery.</p>
+<p><font size="4">3.City Hall Rooftop.</p>
+<p><font size="4">4.Iloilo Capitol Grounds.</p> 
+<p><font size="4">5.Arroyo Fountain.</p> 
+<p><font size="4">6.Nelly's Garden (Sight Seeing).</p> 
+<p><font size="4">7.Jaro Church.</p>
+<p><font size="4">8.Iloilo Megaworld.</p> 
+<p><font size="4">9.Festive Walk.</p> 
+<p><font size="4">10.Iloilo Convention Center.</p>
+<p><font size="4">11.‎Atria Park.</p> 
+<p><font size="4">‎12.Plazuela.</p> 
+<p><font size="4">13.Iloilo Esplanade.</p> 
+<p><font size="4">14.‎Molo Church.</p> 
+<p><font size="4">15.Molo Mansion.</p> 
+<p><font size="4">16.Iloilo City Time Square.</p>
+
+<p><font size="4">(Lunch at PYT STOP (boodle Fight)-at own expense).</p>
+(1pm -Start of South tour) 
+(3pm-Garin Farm) 
+(4pm -Miag ao Church)
+(5pm -Camina Balay Na Bato) 
+(7pm -Dinner - at own expense) 
+(8pm -Back to Hotel)
+
+<p><font size="5">Day 2 (Isla de Gigantes).</p>
+<p><font size="4">(3:30am - Rise and Shine) 
+<p><font size="4">(4am-Pick up at hotel to iloilo terminal).</p> 
+<p><font size="4">(8am-Arrival at Carles port).</p>
+<p><font size="4">(Meet and greet with staff).</p>
+<p><font size="4">(9am-Start of Island Hopping (6-7 islands).</p> 
+<p><font size="4">(3pm-End of tour).</p> 
+<p><font size="4">(4pm-Departure from Carles).</p>
+<p><font size="4">(7:30pm-Pick up at Iloilo Terminal ).</p>
+<p><font size="4">(8pm-Back to hotel).</p> 
+<p><font size="4">Day 3 (Guimaras).</p> 
+<p><font size="4">(6am- rise and shine).</p>
+<p><font size="4">(Check out Hotel).</p>
+<p><font size="4">(7am -Pick up at Hotel to Ortiz Wharf).</p> 
+<p><font size="4">(‎8am -Arrival at Jordan Guimaras to Raymens Beach Resort).</p> 
+<p><font size="4">(9am -Start of Island hopping).</p> 
+<p><font size="4">(12nn -End of Island hopping - ‎lunch at resort (at own expense).</p>
+‎<p><font size="4">(2pm -Start of Land tour/5 destinations).</p> 
+‎<p><font size="4">(5pm end of tour back to Jordan Wharf).</p> 
+<p><font size="4">(6pm arrival in Iloilo - ‎Drop off to Iloilo Airport).</p> 
 
 
 
